# random-C-C-shit

./: .gitignore  CMakeLists.txt
Proj_ Flickering Lights/: winapi.c
Proj_ RickRoll Opener/: WindowCreationDEFINES.h  main.cpp
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
